; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_m68kq68.c_m68kq68_save_state.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_m68kq68.c_m68kq68_save_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@state = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @m68kq68_save_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @m68kq68_save_state(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  store i64 0, i64* %4, align 8
  %6 = bitcast %struct.TYPE_3__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %6, i8 0, i64 8, i1 false)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %17, %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 8
  br i1 %9, label %10, label %20

10:                                               ; preds = %7
  %11 = load i32, i32* @state, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @q68_get_dreg(i32 %11, i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = bitcast i64* %4 to i8*
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %14, i32 8, i32 1, i32* %15)
  br label %17

17:                                               ; preds = %10
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %3, align 4
  br label %7

20:                                               ; preds = %7
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %32, %20
  %22 = load i32, i32* %3, align 4
  %23 = icmp slt i32 %22, 8
  br i1 %23, label %24, label %35

24:                                               ; preds = %21
  %25 = load i32, i32* @state, align 4
  %26 = load i32, i32* %3, align 4
  %27 = load i64, i64* %4, align 8
  %28 = call i64 @q68_get_areg(i32 %25, i32 %26, i64 %27)
  store i64 %28, i64* %4, align 8
  %29 = bitcast i64* %4 to i8*
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %29, i32 8, i32 1, i32* %30)
  br label %32

32:                                               ; preds = %24
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %21

35:                                               ; preds = %21
  %36 = load i32, i32* @state, align 4
  %37 = load i64, i64* %4, align 8
  %38 = call i64 @q68_get_pc(i32 %36, i64 %37)
  store i64 %38, i64* %4, align 8
  %39 = bitcast i64* %4 to i8*
  %40 = load i32*, i32** %2, align 8
  %41 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %39, i32 8, i32 1, i32* %40)
  %42 = load i32, i32* @state, align 4
  %43 = load i64, i64* %4, align 8
  %44 = call i64 @q68_get_sr(i32 %42, i64 %43)
  store i64 %44, i64* %4, align 8
  %45 = bitcast i64* %4 to i8*
  %46 = load i32*, i32** %2, align 8
  %47 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %45, i32 8, i32 1, i32* %46)
  %48 = load i32, i32* @state, align 4
  %49 = load i64, i64* %4, align 8
  %50 = call i64 @q68_get_usp(i32 %48, i64 %49)
  store i64 %50, i64* %4, align 8
  %51 = bitcast i64* %4 to i8*
  %52 = load i32*, i32** %2, align 8
  %53 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %51, i32 8, i32 1, i32* %52)
  %54 = load i32, i32* @state, align 4
  %55 = load i64, i64* %4, align 8
  %56 = call i64 @q68_get_ssp(i32 %54, i64 %55)
  store i64 %56, i64* %4, align 8
  %57 = bitcast i64* %4 to i8*
  %58 = load i32*, i32** %2, align 8
  %59 = call i32 @ywrite(%struct.TYPE_3__* %5, i8* %57, i32 8, i32 1, i32* %58)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @q68_get_dreg(i32, i32) #2

declare dso_local i32 @ywrite(%struct.TYPE_3__*, i8*, i32, i32, i32*) #2

declare dso_local i64 @q68_get_areg(i32, i32, i64) #2

declare dso_local i64 @q68_get_pc(i32, i64) #2

declare dso_local i64 @q68_get_sr(i32, i64) #2

declare dso_local i64 @q68_get_usp(i32, i64) #2

declare dso_local i64 @q68_get_ssp(i32, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
